# PyUdisk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release_notes.rst  requirements.txt  temp.py
.github/workflows/: main.yaml
pyudisk/: __init__.py  config.py  disk_data.py  logger.py  main.py  metrics.py  models.py  notification.py  parsers.py  support.py  util.py
pyudisk/models/: __init__.py  darwin.py  linux.py  smartctl.py
pyudisk/templates/: Darwin.html  Linux.html  template.html
src/: __init__.py  config.py  dump.py  logger.py  main.py  models.py  notification.py  template.html  util.py
