[project]
name = "PyUdisk"
dynamic = ["version", "dependencies"]
description = "Extensive disk monitor for Linux OS"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
]
keywords = ["disk-monitor", "PyUdisk"]
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "pyudisk",
    "pyudisk.templates"
]
[tool.setuptools.package-data]
"pyudisk.templates" = ["*.html"]

[tool.setuptools.dynamic]
version = {attr = "pyudisk.version"}
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
pyudisk = "pyudisk:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/PyUdisk"
Source = "https://github.com/thevickypedia/PyUdisk"
